--- a/src/index.pug
+++ b/src/index.pug
@@ -111,23 +111,18 @@ block content
                     img(class="feedback__img" src="img/picture-feedback-1.jpg")
                     .feedback__name Павел Колесников
                     .feedback__city г. Воронеж
-                    p.feedback__text Мне и брат, и коллега рекомендовали данный ресурс для заказа деревянного домика. Но всё как-то я не доверял этим отзывам. Покопался на сайте и что было, то и заказал – главное, чтоб побыстрее.  Тройку дней я всё же потерял за уточнениями проекта, за непроходимостью дорог к моей даче и т.д.
-                    p.feedback__text Но качество действительно очень даже. Стоит себе не качается.
-                    p.feedback__text И соседям нравится. Теперь вот и я рекомендую)
+                    p.feedback__text Задумали строительство дачи. Хочется и домик, и баньку, и пару пристроек для хоз. нужд. Спасибо ребятам. Посоветовали, какой материал лучше выбрать, чтобы цена соответствовала качеству. Сразу видно, что болеют за свою работу, не просто время отбывают. Доставили всё в срок. Никаких нареканий нет.
                 .slider__item.feedback
-                    img(class="feedback__img" src="img/picture-feedback-1.jpg")
-                    .feedback__name Павел Колесников
-                    .feedback__city г. Воронеж
-                    p.feedback__text Мне и брат, и коллега рекомендовали данный ресурс для заказа деревянного домика. Но всё как-то я не доверял этим отзывам. Покопался на сайте и что было, то и заказал – главное, чтоб побыстрее.  Тройку дней я всё же потерял за уточнениями проекта, за непроходимостью дорог к моей даче и т.д.
-                    p.feedback__text Но качество действительно очень даже. Стоит себе не качается.
-                    p.feedback__text И соседям нравится. Теперь вот и я рекомендую)
+                    img(class="feedback__img" src="img/picture-feedback-2.jpg")
+                    .feedback__name Пётр Тимофеев
+                    .feedback__city г. Москва
+                    p.feedback__text Здравствуйте, покупал здесь сухие доски для стройки, и вот что хочу сказать. Цены просто замечательные, оператору отдельный респект, посоветовал материал который по цене был меньше чем тот что хотел, а по качеству в разы лучше. Сколько времени прошло, а с досками ничего не случилось, как стояли так и стоят. Спасибо большое!!!! Магазин советую)
                 .slider__item.feedback
-                    img(class="feedback__img" src="img/picture-feedback-1.jpg")
-                    .feedback__name Павел Колесников
-                    .feedback__city г. Воронеж
-                    p.feedback__text Мне и брат, и коллега рекомендовали данный ресурс для заказа деревянного домика. Но всё как-то я не доверял этим отзывам. Покопался на сайте и что было, то и заказал – главное, чтоб побыстрее.  Тройку дней я всё же потерял за уточнениями проекта, за непроходимостью дорог к моей даче и т.д.
-                    p.feedback__text Но качество действительно очень даже. Стоит себе не качается.
-                    p.feedback__text И соседям нравится. Теперь вот и я рекомендую)
+                    img(class="feedback__img" src="img/picture-feedback-3.jpg")
+                    .feedback__name Герман Тарасов
+                    .feedback__city г. Пермь
+                    p.feedback__text Хочу выразить благодарность. Покупал пиломатериалы  на отделку мансарды.  Очень большой ассортимент, отличного  качества.по приемлемой цене. Приятно удивил вас сервис обслуживания, все на высшем уровне. По мере надобности буду и дальше обращаться к вам.
+
 
 
     .contactSection#contactSection
