--- a/src/product.pug
+++ b/src/product.pug
@@ -5,7 +5,7 @@ block append title
 
 block content
     .productSection
-        .container.flex_row__between
+        .container.flex_row__end.align_start
             ul.productSection__menu.dropdown
                 li <span class="mob arrow arrow_down">Категории</span>
                     ul
