--- a/src/pug-components/layout.pug
+++ b/src/pug-components/layout.pug
@@ -41,7 +41,7 @@ html(lang="ru-Ru")
                 .container
                     button.burger
                         i
-                    ul.nav.dropdown.active.flex_row__around.align_center.flex_wrap
+                    ul.nav.dropdown.flex_row__around.align_center.flex_wrap
                         li.nav__item
                             a(class=page == 'Главная' ? "link-spy arrow arrow_down desk" : "arrow arrow_down desk" href=page == 'Главная' ? "#catalogSection" : "index.html#catalogSection") Категории
                             <a class="arrow arrow_down mob">Категории</a>
@@ -116,7 +116,7 @@ html(lang="ru-Ru")
                                         li <a href="">Утеплитель ISOROC</a>
 
                         li.nav__item
-                            a(href="") Доставка и оплата
+                            a(href="delivery.html") Доставка и оплата
                         li.nav__item
                             a(class=page == 'Главная' ? "link-spy":"" href=page == 'Главная' ?"#feedbackSection":"index.html#feedbackSection") Отзывы
                         li.nav__item
