--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -27,10 +27,6 @@ body.active {
   position: fixed;
 }
 
-.sticky {
-  position: fixed !important
-  top: 0
-}
 
 .btn {
   min-height: 58px;
@@ -801,7 +797,6 @@ ul.dropdown:after {
     bottom: 30px
     left: 30px
     right: 30px
-    width: 100%
     color: #323232
     font-family: Montserrat
     font-size: 14px
@@ -1034,10 +1029,8 @@ ul.dropdown:after {
       .nav {
         flex-direction: column
         //justify-content: center
-
-        padding-top: 50px
-        padding-bottom: 50px
         text-align: center
+        padding-bottom: 50px
       }
       .burger {
         display: block
@@ -1045,6 +1038,10 @@ ul.dropdown:after {
         z-index: 10
         right: 15px
         top: 70px
+      }
+      .container {
+        padding: 50px 25px 0 25px
+
       }
     }
     .nav {
@@ -1219,4 +1216,12 @@ ul.dropdown:after {
   }
 }
 
+
+.deliverySection {
+  margin-bottom: 90px
+  &__title {
+    margin-top: 80px
+    margin-bottom: 60px
+  }
+}
 
