Fixed mobile version of link-spy

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -877,6 +877,10 @@ ul.dropdown:after {
     display: none
   }
 
+  .dropdown ul li a {
+    padding-right: 23px
+  }
+
   .arrow {
     padding-right: 23px !important
 
