--- a/src/trash/css/common.css
+++ b/src/trash/css/common.css
@@ -647,6 +647,9 @@ ul.dropdown:after {
   .dropdown li > ul:not(.active) {
     display: none;
   }
+  .dropdown ul li a {
+    padding-right: 23px;
+  }
   .arrow {
     padding-right: 23px !important;
   }
